Half-working test

--- a/public/content.html
+++ b/public/content.html
@@ -13,52 +13,52 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle hand"><strong>g_</strong> <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)">
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)">
                             <a class="hand" ng-click="ctrl.addClick()">
                                 <span class="glyphicon glyphicon-plus"></span>
                                 Add game
                             </a>
                         </li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)" class="divider"></li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)">
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)" class="divider"></li>
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)">
                             <a class="hand" ng-click="ctrl.manageGenresClick()">
                                 <span class="glyphicon glyphicon-list"></span>
                                 Manage genres
                             </a>
                         </li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)">
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)">
                             <a class="hand" ng-click="ctrl.managePlatformsClick()">
                                 <span class="glyphicon glyphicon-list"></span>
                                 Manage platforms
                             </a>
                         </li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)">
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)">
                             <a class="hand" ng-click="ctrl.manageTagsClick()">
                                 <span class="glyphicon glyphicon-list"></span>
                                 Manage tags
                             </a>
                         </li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)">
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)">
                             <a class="hand" ng-click="ctrl.manageQueueClick()">
                                 <span class="glyphicon glyphicon-list"></span>
                                 Manage queue
                             </a>
                         </li>
-                        <li ng-if="ctrl.authenticated && (!ctrl.userId || ctrl.authenticated_id == ctrl.userId)" class="divider"></li>
+                        <li ng-if="ctrl.gameService.authenticated && (!ctrl.gameService.userId || ctrl.gameService.authenticated_id == ctrl.gameService.userId)" class="divider"></li>
                         <li>
-                            <a class="hand" ng-click="ctrl.viewChanged(ctrl.LIST_VIEW)">
+                            <a class="hand" ng-click="ctrl.viewChanged(ctrl.gameService.LIST_VIEW)">
                                 <span class="glyphicon glyphicon-list"></span>
                                 List view
                             </a>
                         </li>
                         <li>
-                            <a class="hand" ng-click="ctrl.viewChanged(ctrl.GRID_VIEW)">
+                            <a class="hand" ng-click="ctrl.viewChanged(ctrl.gameService.GRID_VIEW)">
                                 <span class="glyphicon glyphicon-th"></span>
                                 Grid view
                             </a>
                         </li>
                         <li class="divider"></li>
-                        <li ng-repeat="user in ctrl.users | orderBy:'username'">
+                        <li ng-repeat="user in ctrl.gameService.users | orderBy:'username'">
                             <a class="hand" href="#/{{user.id}}">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 {{user.username}}'s collection
@@ -79,17 +79,17 @@
                     <input type="search" class="form-control" placeholder="Title" ng-model="ctrl.query.title" ng-model-options="{debounce: 200}">
                 </div>
                 <div class="form-group">
-                    <select class="form-control" ng-model="ctrl.query.platform" ng-options="p.id as p.name for p in ctrl.platforms | orderBy:'name'">
+                    <select class="form-control" ng-model="ctrl.query.platform" ng-options="p.id as p.name for p in ctrl.gameService.platforms | orderBy:'name'">
                         <option value="">Any platform</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control" ng-model="ctrl.query.genre" ng-options="g.id as g.name for g in ctrl.genres | orderBy:'name'">
+                    <select class="form-control" ng-model="ctrl.query.genre" ng-options="g.id as g.name for g in ctrl.gameService.genres | orderBy:'name'">
                         <option value="">Any genre</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control" ng-model="ctrl.query.tag" ng-options="t.id as t.name for t in ctrl.tags | orderBy:'name'">
+                    <select class="form-control" ng-model="ctrl.query.tag" ng-options="t.id as t.name for t in ctrl.gameService.tags | orderBy:'name'">
                         <option value="">Any tag</option>
                     </select>
                 </div>
@@ -113,13 +113,13 @@
                 </button>
             </form>
             <form class="navbar-form navbar-right">
-                <button ng-if="!ctrl.authenticated" type="button" class="btn btn-default" ng-click="ctrl.loginClick()"><span class="glyphicon glyphicon-log-in"></span></button>
-                <button ng-if="ctrl.authenticated" type="button" class="btn btn-default" ng-click="ctrl.logoutClick()"><span class="glyphicon glyphicon-log-out"></span></button>
+                <button ng-if="!ctrl.gameService.authenticated" type="button" class="btn btn-default" ng-click="ctrl.loginClick()"><span class="glyphicon glyphicon-log-in"></span></button>
+                <button ng-if="ctrl.gameService.authenticated" type="button" class="btn btn-default" ng-click="ctrl.logoutClick()"><span class="glyphicon glyphicon-log-out"></span></button>
             </form>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 <div class="container-fluid full-height">
-    <ng-include src="'grid-view.html'" ng-if="ctrl.view == ctrl.GRID_VIEW"></ng-include>
-    <ng-include src="'list-view.html'" ng-if="ctrl.view == ctrl.LIST_VIEW"></ng-include>
+    <ng-include src="'grid-view.html'" ng-if="ctrl.gameService.view == ctrl.gameService.GRID_VIEW"></ng-include>
+    <ng-include src="'list-view.html'" ng-if="ctrl.gameService.view == ctrl.gameService.LIST_VIEW"></ng-include>
 </div><!-- /.container -->
