--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
     <script src="js/factories/Users.min.js"></script>
     <script src="js/filters/offset.min.js"></script>
     <script src="js/filters/search.min.js"></script>
+    <script src="js/services/gameService.min.js"></script>
 </body>
 </html>
