--- a/public/list-view.html
+++ b/public/list-view.html
@@ -3,7 +3,7 @@
         <div ng-show="currentlyPlaying.length > 0">
             <h1 class="text-center">Currently Playing</h1>
             <div class="list-group">
-                <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in currentlyPlaying = (ctrl.games | search:ctrl.query | filter:{currently_playing: true} | orderBy:'sort_as')" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
+                <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in currentlyPlaying = (ctrl.gameService.games | search:ctrl.query | filter:{currently_playing: true} | orderBy:'sort_as')" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
                     <div class="pull-right" ng-if="game.rating">
                         <game-rating game="game"></game-rating>
                     </div>
@@ -16,7 +16,7 @@
         <div ng-show="queue.length > 0">
             <h1 class="text-center">Queue</h1>
             <div class="list-group">
-                <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in queue = (ctrl.games | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:['queue_position', 'sort_as'])" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
+                <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in queue = (ctrl.gameService.games | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:['queue_position', 'sort_as'])" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
                     <div class="pull-right" ng-if="game.rating">
                         <game-rating game="game"></game-rating>
                     </div>
@@ -31,7 +31,7 @@
             <h3 class="text-center">No results</h3>
         </div>
         <div class="list-group">
-            <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in filtered = (ctrl.games | search:ctrl.query | orderBy:'sort_as')" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
+            <a class="list-group-item hand overflow-ellipsis" ng-repeat="game in filtered = (ctrl.gameService.games | search:ctrl.query | orderBy:'sort_as')" ng-click="ctrl.gameSelected(game)" ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == 1}">
                 <div class="pull-right" ng-if="game.rating">
                     <game-rating game="game"></game-rating>
                 </div>
@@ -43,9 +43,9 @@
     </div>
     <div class="col-sm-6 detail-column">
         <game game="ctrl.selectedGame"
-              genres="ctrl.genres"
-              platforms="ctrl.platforms"
-              tags="ctrl.tags"
+              genres="ctrl.gameService.genres"
+              platforms="ctrl.gameService.platforms"
+              tags="ctrl.gameService.tags"
               link-callback="ctrl.openLinkDialog(ctrl.selectedGame)"
               edit-callback="ctrl.editClick(ctrl.selectedGame)"
               show-edit="ctrl.authenticated && ctrl.selectedGame.user_id == ctrl.authenticated_id"
@@ -66,18 +66,18 @@
             </div>
             <div class="panel-body">
                 <dl class="dl-horizontal">
-                    <dt style="width: 100px;">{{ctrl.games.length}}</dt>
+                    <dt style="width: 100px;">{{ctrl.gameService.games.length}}</dt>
                     <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
                     <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
                     <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
                 </dl>
             </div>
         </div>
-        <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Year" key="year" value="title" items="ctrl.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
-        <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
-        <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
+        <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.gameService.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+        <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.gameService.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+        <stats-panel panel-title="Year" key="year" value="title" items="ctrl.gameService.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+        <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
+        <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
+        <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
     </div>
 </div>
