--- a/public/list-view.html
+++ b/public/list-view.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <h1 class="text-center">All Games</h1>
-        <div ng-if="ctrl.games.length > 0 && filtered.length == 0">
+        <div ng-if="ctrl.gameService.games.length > 0 && filtered.length == 0">
             <h3 class="text-center">No results</h3>
         </div>
         <div class="list-group">
