--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/loading-bar.min.js"></script>
     <script src="js/angular-upload.min.js"></script>
