--- a/public/form.html
+++ b/public/form.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
     <button type="button" class="close"></button>
     <h4 class="modal-title">
-        <span ng-if="isNew">Add game</span>
-        <span ng-if="!isNew">Edit game</span>
+        <span ng-if="isNew">Add Game</span>
+        <span ng-if="!isNew">Edit Game</span>
     </h4>
 </div>
 <div class="modal-body">
