--- a/public/link.html
+++ b/public/link.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close"></button>
-    <h4 class="modal-title">Link</h4>
+    <h4 class="modal-title">Share Link</h4>
 </div>
 <div class="modal-body">
     <p>
