--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close"></button>
-    <h4 class="modal-title">About</h4>
+    <h4 class="modal-title">About g_</h4>
 </div>
 <div class="modal-body">
     <p>
