--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <button type="button" class="close"></button>
     <h4 class="modal-title">
-        Log in
+        Log In
     </h4>
 </div>
 <div class="modal-body">
