--- a/public/manage.html
+++ b/public/manage.html
@@ -1,13 +1,21 @@
 <div class="modal-header">
     <button type="button" class="close"></button>
     <h4 class="modal-title">
-        <span ng-if="type == 'genre'">Manage genres</span>
-        <span ng-if="type == 'platform'">Manage platforms</span>
-        <span ng-if="type == 'tag'">Manage tags</span>
+        <span ng-if="type == 'genre'">Manage Genres</span>
+        <span ng-if="type == 'platform'">Manage Platforms</span>
+        <span ng-if="type == 'tag'">Manage Tags</span>
     </h4>
 </div>
 <div class="modal-body">
     <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <label>Name</label>
+            </div>
+            <div class="col-md-4">
+                <label>Short name</label>
+            </div>
+        </div>
         <div class="row" ng-repeat="item in items | filter:{deleted: false} | orderBy:'name'">
             <div class="col-md-6">
                 <div class="form-group">
@@ -21,7 +29,7 @@
             </div>
             <div class="col-md-2">
                 <button class="btn btn-danger" type="button" ng-click="deleteClick(item)">
-                    <span class="glyphicon glyphicon-minus"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
                 </button>
             </div>
         </div>
@@ -37,7 +45,7 @@
                 </div>
             </div>
             <div class="col-md-2">
-                <button class="btn btn-primary" type="button" ng-click="addClick()">
+                <button class="btn btn-primary" type="button" ng-click="addClick()" ng-disabled="!form.name || !form.short_name">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
             </div>
@@ -45,6 +53,6 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-primary" ng-click="saveClick()">OK</button>
+    <button type="button" class="btn btn-primary" ng-click="saveClick()" ng-disabled="!canSave()">OK</button>
     <button type="button" class="btn btn-default" ng-click="cancelClick()">Cancel</button>
 </div>
