more small stuff

--- a/public/game.html
+++ b/public/game.html
@@ -14,7 +14,7 @@
     </div>
     <div class="panel-body media game-panel-body" ng-style="heightStyle">
         <div class="pull-left game-cover-container">
-            <img class="media-object game-cover" ng-if="game.image" ng-src="{{game.decachedImage}}" alt="Game cover">
+            <img class="media-object game-cover img-rounded" ng-if="game.image" ng-src="{{game.decachedImage}}" alt="Game cover">
             <p ng-if="!game.image">
                 No cover image
             </p>
