--- a/public/form.html
+++ b/public/form.html
@@ -12,7 +12,7 @@
                 <div class="col-md-4">
                     <h4>Details</h4>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Title" ng-model="form.title" ng-change="titleChanged()">
+                        <input type="text" class="form-control input-lg" placeholder="Title" ng-model="form.title" ng-change="titleChanged()">
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Sort as" ng-model="form.sort_as">
