--- a/public/link.html
+++ b/public/link.html
@@ -7,7 +7,7 @@
         The following permalink can be shared:
     </p>
     <div class="form-group">
-        <input type="text" class="form-control" disabled ng-value="url">
+        <input type="text" class="form-control" readonly ng-value="url">
     </div>
 </div>
 <div class="modal-footer">
